# eso-profiler-viewer

./: .gitignore  Gruntfile.cjs  README.md  app-icon.png.license  docker-compose.yml  package-lock.json  package.json  package.json.license
src-perfetto/: build.sh
src-perfetto/plugin/: ESOProfilerExporterConverter.ts  index.ts
src-perfetto/resources/: custom.css
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json  tauri.conf.json.license
src-tauri/src/: main.rs
