# SPDX-FileCopyrightText: 2022 sirinsidiator <insidiator@cmos.at>
#
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "eso-profiler"
version = "2.0.0"
description = "ESO Profiler Viewer"
authors = ["sirinsidiator"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = {version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "fs-read-file", "path-all"] }
tauri-plugin-localhost = "0.1"
portpicker = "0.1"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
